# src/controllers/ping.controller.ts
@@ -1,15 +1,0 @@
-import { Get, Route } from "tsoa";
-
-interface PingResponse {
-    message: string;
-}
-
-@Route("ping")
-export default class PingController {
-    @Get("/")
-    public async getMessage(): Promise<PingResponse> {
-        return {
-            message: "pong"
-        };
-    }
-}
